<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateContact">

    <Button
        android:id="@+id/deleteContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/current_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/newName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.768" />

    <TextView
        android:id="@+id/current_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/newPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/newPhone"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/new_phone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/updateContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.854" />

    <EditText
        android:id="@+id/newName"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/newPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/updateContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        app:layout_constraintBottom_toTopOf="@+id/deleteContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.966" />
</androidx.constraintlayout.widget.ConstraintLayout>